begining of task 2

--- a/computational nanotechnology/Lab3.ipynb
+++ b/computational nanotechnology/Lab3.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "54172075-553f-451f-a587-90e72e9ef853",
+   "id": "a163ca50-343a-4e18-bcb0-bd4051211a97",
    "metadata": {},
    "source": [
-    "Задание: Для функции f(x) найти точку локального минимума, пользуясь\r\n",
-    "указанными методами. Сравнить эффективность методов (например, количество\r\n",
-    "вычислений функции или производных для достижения заданной точности). Если\r\n",
-    "локальных минимумов несколько, достаточно найти только один из них. Первоначальный\r\n",
-    "отрезок локализации минимума можно находить с помощью метода равномерного поиска\r\n",
-    "или графического метода. Для контроля правильности реализации методов, используйте\r\n",
-    "встроенные функции из библиотеки \n",
+    "Задание: Для функции f(x) найти точку локального минимума, пользуясь\n",
+    "указанными методами. Сравнить эффективность методов (например, количество\n",
+    "вычислений функции или производных для достижения заданной точности). Если\n",
+    "локальных минимумов несколько, достаточно найти только один из них. Первоначальный\n",
+    "отрезок локализации минимума можно находить с помощью метода равномерного поиска\n",
+    "или графического метода. Для контроля правильности реализации методов, используйте\n",
+    "встроенные функции из библиотеки scipy.\n",
     "Методы:\n",
-    "Метод Фибоначчи\n",
-    "Метод Ньютонаscipy."
+    "Метод Фибоначчи,\n",
+    "Метод Ньютона."
    ]
   },
   {
@@ -24,16 +24,12 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'm' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 68\u001b[0m\n\u001b[1;32m     65\u001b[0m     Scipy_method()\n\u001b[1;32m     67\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m---> 68\u001b[0m     \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[1], line 63\u001b[0m, in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmain\u001b[39m():\n\u001b[0;32m---> 63\u001b[0m     \u001b[43mFibonucci_method\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     64\u001b[0m     Newton_method()\n\u001b[1;32m     65\u001b[0m     Scipy_method()\n",
-      "Cell \u001b[0;32mIn[1], line 10\u001b[0m, in \u001b[0;36mFibonucci_method\u001b[0;34m(eps)\u001b[0m\n\u001b[1;32m      8\u001b[0m a, b \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1.7\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m0.1\u001b[39m\n\u001b[1;32m      9\u001b[0m l \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m---> 10\u001b[0m num \u001b[38;5;241m=\u001b[39m \u001b[43mm\u001b[49m\u001b[38;5;241m.\u001b[39mceil((b \u001b[38;5;241m-\u001b[39m a) \u001b[38;5;241m/\u001b[39m (l \u001b[38;5;241m*\u001b[39m eps))\n\u001b[1;32m     11\u001b[0m fib \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m num \u001b[38;5;241m<\u001b[39m fib[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]:\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'm' referenced before assignment"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FibonucciMethod: Solution - -1.0000000143289425, number of iterations - 37\n",
+      "NewtonMethod: Solution - -1.0, number of iterations - 6\n",
+      "ScipyMethod: Solution - -1.0000002196540423\n"
      ]
     }
    ],
