--- a/computational nanotechnology/Lab9_11.ipynb
+++ b/computational nanotechnology/Lab9_11.ipynb
@@ -82,7 +82,8 @@
     "$$\\frac{1}{r^2}v_1u'r^2\\left|_0^R-\\int_0^R\\left(u'v_1'-\\frac{2}{r}v_1\\right)dr = -\\frac{1}{2\\pi\\epsilon_0\\epsilon_1}\\left(\\frac{v_1}{2r}\\right|_0^R-\\int_0^R\\frac{v_1'r - v_1}{2r^2}dr\\right)$$\n",
     "Слагаемые без интеграла обнулятся поскольку мы специально так выбрали функцию $v_1$ получим\n",
     "$$-\\int_0^R\\left(u'v_1'-\\frac{2}{r}v_1\\right)dr = \\frac{1}{2\\pi\\epsilon_0\\epsilon_1}\\int_0^R\\frac{v_1'r - v_1}{2r^2}dr$$\n",
-    "Для второго уравнения на отрезке $[R; 2R]$ проделаем то же самое и получим"
+    "Для второго уравнения на отрезке $[R; 2R]$ проделаем то же самое, однако введём ещё одну функцию $v_2(r)$, которая на границах отрезка зануляется, и получим\n",
+    "$$-\\int_R^{2R}\\left(u'v_2'-\\frac{2}{r}v_2\\right)dr = \\frac{1}{2\\pi\\epsilon_0\\epsilon_2}\\int_R^{2R}\\frac{v_2'r - v_2}{2r^2}dr$$"
    ]
   },
   {
