--- a/computational nanotechnology/Lab9_11.ipynb
+++ b/computational nanotechnology/Lab9_11.ipynb
@@ -50,10 +50,10 @@
    "id": "feb2e7eb-1d37-424e-b23d-4c78c6a02140",
    "metadata": {},
    "source": [
-    "Поскольку задача сферически симметричная и функция зависит по сути только от радиуса получим следующее:\n",
+    "Поскольку дельта функция принимает нулевые значения на втором отрезке и задача сферически симметричная и функция зависит по сути только от радиуса получим следующее:\n",
     "1) Два уравнения\n",
     "$$\\frac{1}{r^2}(r^2 u')'=-\\frac{\\rho(r)}{\\epsilon_0\\epsilon_1},  0<r<R$$\n",
-    "$$\\frac{1}{r^2}(r^2 u')'=-\\frac{\\rho(r)}{\\epsilon_0\\epsilon_2},  R<r<2R$$\n",
+    "$$\\frac{1}{r^2}(r^2 u')'=0,  R<r<2R$$\n",
     "где $\\rho(r) = \\frac{q\\delta(r)}{2\\pi r}$\n",
     "2) Условие на производную\n",
     "$$\\epsilon_1\\frac{du}{dr}|_{r = R-0} = \\epsilon_2\\frac{du}{dr}|_{r = R+0}$$\n",
@@ -81,9 +81,10 @@
     "Распишем функцию плотности и возьмём обе стороны равенства по частям\n",
     "$$\\frac{1}{r^2}v_1u'r^2\\left|_0^R-\\int_0^R\\left(u'v_1'-\\frac{2}{r}v_1\\right)dr = -\\frac{1}{2\\pi\\epsilon_0\\epsilon_1}\\left(\\frac{v_1}{2r}\\right|_0^R-\\int_0^R\\frac{v_1'r - v_1}{2r^2}dr\\right)$$\n",
     "Слагаемые без интеграла обнулятся поскольку мы специально так выбрали функцию $v_1$ получим\n",
-    "$$-\\int_0^R\\left(u'v_1'-\\frac{2}{r}v_1\\right)dr = \\frac{1}{2\\pi\\epsilon_0\\epsilon_1}\\int_0^R\\frac{v_1'r - v_1}{2r^2}dr$$\n",
+    "$$-\\int_0^Ru'\\left(v_1'-\\frac{2}{r}v_1\\right)dr = \\frac{1}{2\\pi\\epsilon_0\\epsilon_1}\\int_0^R\\frac{v_1'r - v_1}{2r^2}dr$$\n",
     "Для второго уравнения на отрезке $[R; 2R]$ проделаем то же самое, однако введём ещё одну функцию $v_2(r)$, которая на границах отрезка зануляется, и получим\n",
-    "$$-\\int_R^{2R}\\left(u'v_2'-\\frac{2}{r}v_2\\right)dr = \\frac{1}{2\\pi\\epsilon_0\\epsilon_2}\\int_R^{2R}\\frac{v_2'r - v_2}{2r^2}dr$$"
+    "$$\\int_R^{2R}u'\\left(v_2'-\\frac{2}{r}v_2\\right)dr = 0$$\n",
+    "Равно нулю поскольку дельта функция на отрезке $[R; 2R]$ принимает нулевые значения."
    ]
   },
   {
