final version of task 2

--- a/computational nanotechnology/Lab9_11.ipynb
+++ b/computational nanotechnology/Lab9_11.ipynb
@@ -75,16 +75,17 @@
    "id": "67b6d3c1-df42-4f46-a302-b54beb56097f",
    "metadata": {},
    "source": [
-    "Введём некоторую функцию $v_1(r)$, которая удовлетворяет следующим условиям $$ v_1(0) = v_1(R) = 0 $$\n",
+    "Введём некоторую функцию $v(r)$, которая удовлетворяет следующим условиям $$v(2R) = 0$$\n",
     "домножим на неё левую и правую часть первого уравнения и проинтегрируем по нашему отрезку, получим\n",
-    "$$\\int_0^R\\frac{1}{r^2}(r^2 u')'v_1dr = -\\frac{1}{2\\pi\\epsilon_0\\epsilon_1}\\int_0^R\\frac{\\delta v_1}{r}dr$$\n",
-    "Распишем функцию плотности и возьмём обе стороны равенства по частям\n",
-    "$$\\frac{1}{r^2}v_1u'r^2\\left|_0^R-\\int_0^R\\left(u'v_1'-\\frac{2}{r}v_1\\right)dr = -\\frac{1}{2\\pi\\epsilon_0\\epsilon_1}\\left(\\frac{v_1}{2r}\\right|_0^R-\\int_0^R\\frac{v_1'r - v_1}{2r^2}dr\\right)$$\n",
-    "Слагаемые без интеграла обнулятся поскольку мы специально так выбрали функцию $v_1$ получим\n",
-    "$$-\\int_0^Ru'\\left(v_1'-\\frac{2}{r}v_1\\right)dr = \\frac{1}{2\\pi\\epsilon_0\\epsilon_1}\\int_0^R\\frac{v_1'r - v_1}{2r^2}dr$$\n",
-    "Для второго уравнения на отрезке $[R; 2R]$ проделаем то же самое, однако введём ещё одну функцию $v_2(r)$, которая на границах отрезка зануляется, и получим\n",
-    "$$\\int_R^{2R}u'\\left(v_2'-\\frac{2}{r}v_2\\right)dr = 0$$\n",
-    "Равно нулю поскольку дельта функция на отрезке $[R; 2R]$ принимает нулевые значения."
+    "$$\\int_0^R(r^2 u')'vdr = -\\frac{q}{2\\pi\\epsilon_0\\epsilon_1}\\int_0^R\\delta vdr$$\n",
+    "Распишем функцию плотности и возьмём левый интеграл по частям, а для правой применим основное свойство дельта-функции\n",
+    "$$v(R)u'(R-0)R^2-\\int_0^Rr^2u'v'dr = -\\frac{1}{4\\pi\\epsilon_0\\epsilon_1}v(0)$$\n",
+    "Домножим левую и правую части уравнения на $\\epsilon_1$\n",
+    "$$\\epsilon_1v(R)u'(R-0)R^2-\\epsilon_1\\int_0^Rr^2u'v'dr = -\\frac{1}{4\\pi\\epsilon_0}v(0)$$\n",
+    "Для второго уравнения на отрезке $[R; 2R]$ проделаем то же самое, только домножим на $\\epsilon_2$ и получим\n",
+    "$$-\\epsilon_2v(R)u'(R+0)R^2-\\epsilon_2\\int_R^{2R}r^2u'v'dr = 0$$\n",
+    "Сложим два полученных уравнения, учитывая условие на производную, и домножим на $-1$ обе части полученного уравнения\n",
+    "$$\\epsilon_1\\int_0^Rr^2u'v'dr+\\epsilon_2\\int_R^{2R}r^2u'v'dr=\\frac{1}{4\\pi\\epsilon_0}v(0)$$"
    ]
   },
   {
